<resources>
    <string name="app_name" translatable="false">Repoto Push Service Android Client</string>
    <string name="title_activity_sign_in">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="action_register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password confirmation</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password can\' t be empty</string>
    <string name="error_incorrect_password">Username and/or password incorrect</string>
    <string name="error_password_confirmation">Password and confirmation do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="preference_file_key" translatable="false">me.phitherek.repotopushserviceandroidclient.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_main" translatable="false">Repoto Push Service Android Client</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_welcome_message">Welcome to Repoto Push Service Android Client!</string>
    <string name="main_login_required">To use the service, you must authenticate with Repoto Push Service Authentication Endpoint. Login or register using the buttons below.</string>
    <string name="main_login_button">Login</string>
    <string name="main_register_button">Register</string>
    <string name="title_activity_logged_in">Up and running!</string>
    <string name="logged_in_up_and_running">Repoto Push Service Android Client is up and running!</string>
    <string name="logged_in_service_running">The service is now running in the background. You will automatically receive any PushMemos as push notifications.</string>
    <string name="logged_in_logout_button">Logout</string>
    <string name="shared_preferences_current_token_key" translatable="false">current_token</string>
    <string name="shared_preferences_current_username_key" translatable="false">current_username</string>
    <string name="error_auth_server">Authentication server-side error</string>
    <string name="error_empty_values">All fields are required</string>
    <string name="error_unknown">Unknown error</string>
    <string name="title_activity_show">Received PushMemo Content</string>
    <string name="received_new_pushmemo_for">Received new PushMemo for</string>
</resources>
