<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.phitherek.repotopushserviceandroidclient.MainActivity"
    android:id="@+id/main_activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/main_welcome_message"
            android:id="@+id/main_welcome_message_TV"
            android:gravity="center_horizontal"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_login_required"
            android:id="@+id/main_login_required_TV"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1"
            android:gravity="center_vertical|center_horizontal">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tableRow">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_login_button"
                    android:id="@+id/main_login_button" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_register_button"
                    android:id="@+id/main_register_button" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

</RelativeLayout>
