<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin" android:gravity="center_horizontal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.phitherek.repotopushserviceandroidclient.LoggedInActivity">

    <ProgressBar android:id="@+id/logout_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logged_in_main_view">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/logged_in_up_and_running"
            android:id="@+id/up_and_running_TV"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logged_in_service_running"
            android:id="@+id/service_running_TV"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logged_in_logout_button"
                android:id="@+id/logout_button"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
